[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Common/fireball.png" type="Texture" id=2]
[ext_resource path="res://Common/fishTilesheet.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.1492
height = 29.2168

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 256, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "swim",
"speed": 10.0
} ]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="EnemyBody" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "swim"
playing = true

[node name="DeathTimer" type="Timer" parent="."]

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 0.35
one_shot = true
explosiveness = 1.0
randomness = 1.0
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 10.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.72
scale_amount = 0.3
color = Color( 0.886275, 0.690196, 0.352941, 1 )
